[package]
name = "dexloan_listings"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dexloan_listings"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
mpl-token-metadata = { version = "1.3.2", features = ["no-entrypoint"] }
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3.0",  features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
